Changes in version 1.0.0

  New features
    -references to gender have been changed to the more appropriate term sex or sexes
    -added misc slot to populations
    -added finalizePop to SimParam
    -added physical position to getSnpMap and getQtlMap
    
    Bug fixes
    -fixed a bug in editGenome when making multiple edits
    -adding merging of centromere vector in cChr

Changes in version 0.12.2
  
  New features
    -GxE traits now default to random sampling of p-values
  
  Bug fixes
    -fixed a bug in restrSegSites

Changes in version 0.12.1

  Bug fixes
    -fixed a bug in selection of segSites

Changes in version 0.12.0
  
  New features
    -changed output of genParam to match Bulmer, 1976
    -nProgeny added to makeCross and makeCross2
    -all SimParam documentation is now in ?SimParam
    -non-overlapping QTL and SNP is now the default
    -new interface for restrSegSites in SimParam
  
  Bug fixes
    -fixed subset by id for populations
    -fixed major bug in newMapPop

Changes in version 0.11.1
  
  New features
    -switched to a circular design for the balance option in randCross and randCross2
    -added reduceGenome and doubleGenome for changing plody levels
    -added minSnpFreq to SimParam_addSnpChip for any reference population
    -the `c` function now merges individuals for MapPop objects (was chromosomes before)
    -the `cChr` function new merges chromosomes for MapPop objects 
    
  Bug fixes
    -fixed broken SimParam_addStructuredSnpChip
    -removed broken pullMultipleSnpGeno and pullMultipleSnpHaplo
    -fixed broken writePlink

Changes in version 0.11.0
  
  New features
    -$MAJOR CHANGE$ rework of setEBV (breaks some scripts)
    -genotype data now stored as bits (was bytes)
    -implemented a gamma model for crossover interference
    -added the mutate function to model random mutations
    -added a vignette explaining the biological model for traits
    -GS models now handle polyploids